--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server --watch db.json --port 3000",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "json": "^11.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "server": "^1.0.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,6 +28,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "json-server": "^1.0.0-beta.5",
     "vite": "^7.3.1"
   }
 }
